--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>My First Website</title>
     </head>
     <body>
+        <h1>My First Website</h1>
+        <h2>An HTML Playground</h2>
+        <h3>An HTML Playground</h3>
+        <h4>An HTML Playground</h4>
+        <h5>An HTML Playground</h5>
+        <h6>An HTML Playground</h6>
+        <h2>An HTML Playground</h2>
+
         This is my very first website and I'm <b>extremely excited!!!!!!</b>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed tincidunt urna. Vivamus elementum porta consequat. Pellentesque consectetur tortor vel neque vulputate condimentum. Fusce sagittis lectus leo, id pharetra ante volutpat non. Maecenas elementum mi id libero vulputate, eget pellentesque nibh feugiat. Morbi iaculis commodo metus ac ullamcorper. Sed tincidunt, mi eget dignissim malesuada, mauris diam blandit sem, a facilisis justo urna et risus. Ut et tristique quam. Quisque facilisis justo in vestibulum sagittis. Curabitur non dapibus est. Duis pellentesque diam quis luctus malesuada. Integer eu libero id est rhoncus mollis. Donec pretium congue est, quis commodo orci semper eget. Nulla tincidunt sollicitudin turpis eu fringilla.
+        </p>
+
+        <p>
+            Vivamus luctus venenatis cursus. Morbi in leo tortor. Morbi vel cursus lacus. Sed vulputate neque risus, ut molestie tortor varius vitae. Curabitur interdum magna quis bibendum sodales. Pellentesque eu lorem non magna consequat blandit. Fusce commodo vitae turpis id vestibulum. Curabitur at ornare lorem. Cras fermentum molestie sapien sit amet vehicula.
+        </p>
+
+        
+        Praesent elementum risus dignissim ipsum tincidunt, nec lobortis libero tempus. <br><br><br><br><br><br>
+        
+        <b> eros ligula, volutpat et aliquam nec, tristique eget nisi. </b><br>
+        <i>Phasellus laoreet velit eleifend ipsum consequat, in tempus mi bibendum.</i><br>
+        <u>Maecenas laoreet mollis lacinia.</u> <br>
+        <em>Quisque arcu libero, efficitur id venenatis sit amet, cursus ullamcorper felis.</em><br>
+        <strong>Pellentesque malesuada commodo nulla.</strong>
+        <hr>
+        Nullam tincidunt ex sit amet ultricies vestibulum.  
+        <a href="https://www.google.com" target="_blank" >Phasellus sed tincidunt dolor.</a> Phasellus facilisis pharetra est, sed mollis est efficitur sit amet. Curabitur et ante lacinia orci condimentum molestie. Nulla volutpat tempor tempor. Vestibulum euismod purus eu risus aliquet aliquet. Nam in felis sapien. Fusce nec eleifend purus. Curabitur faucibus nec tortor vitae sollicitudin.
+        <br>
+        <img src="600x300.png" >
+
     </body>
 </html>
 
