--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h4>An HTML Playground</h4>
         <h5>An HTML Playground</h5>
         <h6>An HTML Playground</h6>
-        <h2>An HTML Playground</h2>
+        <h2><a href="https://www.youtube.com/watch?v=PlxWf493en4">Video tutorial</a></h2>
 
         This is my very first website and I'm <b>extremely excited!!!!!!</b>
 
@@ -36,7 +36,61 @@
         Nullam tincidunt ex sit amet ultricies vestibulum.  
         <a href="https://www.google.com" target="_blank" >Phasellus sed tincidunt dolor.</a> Phasellus facilisis pharetra est, sed mollis est efficitur sit amet. Curabitur et ante lacinia orci condimentum molestie. Nulla volutpat tempor tempor. Vestibulum euismod purus eu risus aliquet aliquet. Nam in felis sapien. Fusce nec eleifend purus. Curabitur faucibus nec tortor vitae sollicitudin.
         <br>
-        <img src="600x300.png" >
+        <img src="600x300.png" border="10" >
+
+        <ul>
+            <li>apples
+                <ul>
+                    <li>golden delicious</li>
+                    <li>granny smith</li>
+                    <li>gala</li>
+                </ul>
+            </li>
+            <li>oranges</li>
+            <li>pineapples</li>
+            <li>mangos</li>
+            <li>dragonfruit</li>
+        </ul>
+
+        <table border="10" cellpadding="10" cellspacing="0">
+            <tr>
+                <th></th>
+                <th>Month</th>
+                <th>Rent</th>
+                <th colspan="2">Utilities</th>
+                <th>Groceries</th>
+                <th>Eating Out</th>
+                <th>Entertainment</th>
+            </tr>
+            <tr>
+                <td rowspan="3">Fall</td>
+                <td>June</td>
+                <td>$1500</td>
+                <td>$100</td>
+                <td>$50</td>
+                <td>$350</td>
+                <td>$100</td>
+                <td>$50</td>
+            </tr>
+            <tr>
+                <td>July</td>
+                <td>$1500</td>
+                <td>$100</td>
+                <td>$50</td>
+                <td>$350</td>
+                <td>$100</td>
+                <td>$50</td>
+            </tr>
+            <tr>
+                <td>August</td>
+                <td>$1500</td>
+                <td>$100</td>
+                <td>$50</td>
+                <td>$350</td>
+                <td>$100</td>
+                <td>$50</td>
+            </tr>
+        </table>
 
     </body>
 </html>
